Merged changes from v24 branch.